update user grpc to user info